# neutralinojs-ext-vibrancy

./: README.md
app/: neutralino.config.json
app/resources/: index.html  styles.css
app/resources/js/: main.js
src/: CMakeLists.txt  main.cpp  uuid.hpp  vibrancyWindows.h
src/lib/json/: json.hpp
src/lib/websocketpp/: uri.hpp
src/lib/websocketpp/processors/: hybi13.hpp
