cmake_minimum_required(VERSION 3.15...3.30)
project(NeutralinojsVibrancy VERSION 1.0 DESCRIPTION "A neutralinojs extension" LANGUAGES CXX)
set( cur_path ${CMAKE_CURRENT_SOURCE_DIR} )
cmake_path(GET cur_path PARENT_PATH parent_path)
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${parent_path}/app/extensions/extVibrancy)
set(CMAKE_CXX_STANDARD 11)
include_directories(./lib)
link_libraries(ws2_32)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_WEBSOCKETPP_CPP11_STL_ -DASIO_STANDALONE -D_WEBSOCKETPP_CPP11_THREAD_")
add_executable(bin ${PROJECT_SOURCE_DIR}/main.cpp)